- Fix for the sub PreferenceScreens (actionbar button allows to go back) - Additional check for invalid EQS values in default.xml on renewGrid() - Russian localization, please use @string from now on :) EQS tiles are still in English